# JustCircle

./: .clang-format  CMakeLists.txt  CMakeSettings.json  ReadMe.adoc  circle.yaml  main.cpp
src/reflection/: CMakeLists.txt
src/reflection/enum/: CMakeLists.txt  enum.cpp
